--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-PAYLOAD_SECRET=
-MONGODB_URI=
-CUSTOM_DB_NAME=
+MONGODB_URI=mmongodb://127.0.0.1:27017/next-payload-3
+PAYLOADCMS_SECRET=some_secret
+CUSTOM_DB_NAME=test
